--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "ember-persistent-date",
   "dependencies": {
-    "almond": "git://github.com/withassociates/almond#master",
-    "handlebars": "~1.3.0",
-    "jquery": "~2.0.0",
-    "ember": "~1.4.0",
-    "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master"
+    "ancient-oak"    : "~0.0.3",
+    "handlebars"     : "~1.3.0",
+    "jquery"         : "~2.0.0",
+    "ember"          : "~1.4.0",
+    "ember-resolver" : "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master"
   },
   "resolutions": {
     "ember": "~1.4.0"
