--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "handlebars"     : "~1.3.0",
     "jquery"         : "~2.0.0",
     "ember"          : "~1.4.0",
-    "ember-resolver" : "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master"
+    "ember-resolver" : "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master",
+    "qunit"          : "~1.14.0"
   },
   "resolutions": {
     "ember": "~1.4.0"
